--- a/views/add.hbs
+++ b/views/add.hbs
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <form action="/addAccount" method="post" role="form" enctype="application/x-www-form-urlencoded">
+               <br>
                 <legend>Add Account Details</legend>
 
                 <div class="form-group">
@@ -16,7 +17,8 @@
 
                 <div class="form-group">
                     <label for="pw">Amount</label>
-                    <input type="number" class="form-control" name="Denomination" id="Denomination" placeholder="Amount">
+                    <input type="number" class="form-control" name="Denomination" id="Denomination"
+                        placeholder="Amount">
                 </div>
 
                 <button type="submit" class="btn btn-primary">Add Account</button>
