--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,40 @@
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 mt-5">
+        <h4 class="text-center">Search Account</h4>
+        <form class="justify-content-center" action="/" method="GET">
+          <div class="active-cyan-3 active-cyan-4 mb-4">
+            <input style="border-color:#45EBA5" class="form-control" name="search" type="text"
+              placeholder="Enter The Name" aria-label="Search">
+          </div>
+          <div class="text-center">
+            <button type="submit" style="color:white;" class="btn btn-success  ">Search</button>
+          </div>
 
+      </div>
+      </form>
+    </div>
+  </div>
+</section>
 
-<div class="container mt-5">
-             <div class="row">   
-               <div class="row-mt-4">
-                 <a href="/add" class="btn btn-success">ADD</a>
-                 <a href="/delete" class="btn btn-danger">Delete</a>
-                </div>
-              <div class="col-md-6 m-auto">
-                <h3 class="text-left mb-3" style="color:white">Account Lookup</h3>
-                  <div class="form-group">
-                    <input type="text" id="search" class="form-contorl form-control-lg" placeholder="Enter Name">
-                  </div>
-                  <div id="list">
-                  </div>
-              </div>
-              </div>
-             <div id="list"></div>
+<section>
+  <div class="container mt-4">
+    <div class="row">
+      {{#each accounts}}
+      <div class="col-md-3 p-3">
+        <div class="card" style="width: 17rem;height:15rem;border-color:#45EBA5">
+          <div class="card-body">
+            <h5 class="card-title">{{this.Name}}</h5>
+            <h3 style="color:red;" class="card-subtitle mb-2">{{this.Number}}</h3>
+            <p class="card-text">{{this.Denomination}}</p>
+
+            <a href="/addToList/{{this._id}}" class="btn btn-primary " role="button">Add To list</a>
+
+          </div>
         </div>
+      </div>
+      {{/each}}
+    </div>
+  </div>
+</section>
