--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,30 +1,81 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-    <style>
-      body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 1000% 1000%;
-	animation: gradient 15s ease infinite;
-}
+<!doctype html>
+<html lang="en">
 
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    </style>
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+  <title>Account Lookup</title>
+  <style>
+    #list {
+      background-color: #1C2331;
+      width: 1070px;
+      border: 150px;
+      padding: 50px;
+      margin: 20px;
+      color: white;
+    }
+
+    #footer {
+      background-color: #1C2331;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg " style="background-color: #1C2331">
+      <a class="navbar-brand" href="/" style="color: white">
+        <h3>Account Lookup</h3>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
+          <a class="btn btn-success mr-2" href="/add">Add Account </a>
+          <a class="btn btn-secondary mr-2" href="Delete">Delete Account </a>
+          <a class="btn btn-primary" href="/final">Final List</a>
+
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  {{{body}}}
+
+
+  <br>
+  <br>
+  <footer id="footer" class="page-footer font-small  " style="background-color:#1C2331;">
+
+    <div style="color:white" class="footer-copyright text-center py-3">© 2020 Copyright:DcodeMatrix</div>
+
+  </footer>
+  {{!-- Clipboard --}}
+  <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
+  <script>let clipboard = new ClipboardJS('#copyText');</script>
+    <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
