--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,7 +26,10 @@
       position: fixed;
       bottom: 0;
       width: 100%;
+    }
+    #record{
 
+      background-color: red;
     }
   </style>
 </head>
@@ -59,7 +62,7 @@
   <br>
   <footer id="footer" class="page-footer font-small  " style="background-color:#1C2331;">
 
-    <div style="color:white" class="footer-copyright text-center py-3">© 2020 Copyright:DcodeMatrix</div>
+    <div style="color:white" class="footer-copyright text-center py-3">© 2020 CopyrightDcodeMatrix</div>
 
   </footer>
   {{!-- Clipboard --}}
