--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <title>Account Lookup</title>
+  <title>DOP Agent Automator</title>
   <style>
     #list {
       background-color: #1C2331;
@@ -38,7 +38,7 @@
   <header>
     <nav class="navbar navbar-expand-lg " style="background-color: #1C2331">
       <a class="navbar-brand" href="/" style="color: white">
-        <h3>Account Lookup</h3>
+        <h3>DOP Agent Automator</h3>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,9 +65,14 @@
     <div style="color:white" class="footer-copyright text-center py-3">© 2020 CopyrightDcodeMatrix</div>
 
   </footer>
+      {{!-- Ajax Jquery Library --}}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        {{!-- <script src="/javascripts/script.js"></script>  --}}
   {{!-- Clipboard --}}
   <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
-  <script>let clipboard = new ClipboardJS('#copyText');</script>
+  <script>
+    let clipboard = new ClipboardJS('#copyText');
+  </script>
     <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -79,6 +84,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
