--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+
+   {{!-- Ajax Jquery Library --}}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="javascripts/script.js"></script>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -65,15 +69,13 @@
     <div style="color:white" class="footer-copyright text-center py-3">© 2020 CopyrightDcodeMatrix</div>
 
   </footer>
-      {{!-- Ajax Jquery Library --}}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        {{!-- <script src="/javascripts/script.js"></script>  --}}
+ 
   {{!-- Clipboard --}}
   <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
   <script>
     let clipboard = new ClipboardJS('#copyText');
   </script>
-    <!-- Optional JavaScript -->
+  <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
