--- a/views/add.hbs
+++ b/views/add.hbs
@@ -6,22 +6,22 @@
                 <legend>Add Account Details</legend>
 
                 <div class="form-group">
-                    <label for="first_name">Name</label>
+                    <label for="Name">Name</label>
                     <input type="text" class="form-control" name="Name" id="Name" placeholder="Name of Account Holder">
                 </div>
 
                 <div class="form-group">
-                    <label for="email">Account Number</label>
+                    <label for="Number">Account Number</label>
                     <input type="number" class="form-control" name="Number" id="Number" placeholder="Account Number">
                 </div>
 
                 <div class="form-group">
-                    <label for="pw">Amount</label>
+                    <label for="Denomination">Amount</label>
                     <input type="number" class="form-control" name="Denomination" id="Denomination"
                         placeholder="Amount">
                 </div>
                 <div class="form-group">
-                    <input type="hidden" class="form-control" name="default" id="default" value="1">
+                    <input type="number" class="form-control" name="default" id="default" hidden value=1>
                 </div>
                 <button type="submit" class="btn btn-primary">Add Account</button>
                 <a href="/" class="btn btn-primary">Cancel</a>
