--- a/views/delete.hbs
+++ b/views/delete.hbs
@@ -6,7 +6,7 @@
                 <legend>Delete Account Details</legend>
 
                 <div class="form-group">
-                    <label for="email">Account Number</label>
+                    <label for="number">Account Number</label>
                     <input type="number" class="form-control" name="Number" id="Number" placeholder="Account Number">
                 </div>
 
