--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,12 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
   {{!-- Alertify  --}}
-  
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
 
   <title>DOP Agent Automator</title>
   <style>
@@ -26,13 +26,7 @@
       color: white;
     }
 
-    #footer {
-      background-color: #1C2331;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-    #record{
+    #record {
 
       background-color: red;
     }
@@ -40,40 +34,12 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg " style="background-color: #1C2331">
-      <a class="navbar-brand" href="/" style="color: white">
-        <h3>DOP Agent Automator</h3>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ml-auto">
-          <a class="btn btn-success mr-2" href="/add">Add Account </a>
-          <a class="btn btn-secondary mr-2" href="Delete">Delete Account </a>
-          <a class="btn btn-primary" href="/final" >Final List <span id="count" class="badge badge-light">{{count}}</span> </a>
-
-        </div>
-      </div>
-    </nav>
-  </header>
-
+  {{#if admin}}
+  {{>admin-header}}
+  {{else}}
+  {{>user-header}}
+  {{/if}}
   {{{body}}}
-
-
-  <br>
-  <br>
-  <footer id="footer" class="page-footer font-small  " style="background-color:#1C2331;">
-
-    <div style="color:white" class="footer-copyright text-center py-3">© 2020 CopyrightDcodeMatrix</div>
-
-  </footer>
-  
-  
-   {{!-- Ajax Jquery Library --}}
-    <script src="/javascripts/script.js"></script>
 
   {{!-- Clipboard --}}
   <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
@@ -88,16 +54,19 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
     integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
 
-    {{!-- alertifyjs --}}
-    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+  {{!-- alertifyjs --}}
+  <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
 
-     {{!-- Ajax Jquery Library --}} 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/javascripts/script.js"></script>
+  {{!-- Ajax Jquery Library --}}
+
+  {{!-- <script src="/javascripts/script.js"></script> --}}
+  {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.8/xlsx.full.min.js"></script> --}}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="/javascripts/script.js"></script>
 </body>
 
 </html>
