--- a/views/viewAllUser.hbs
+++ b/views/viewAllUser.hbs
@@ -27,3 +27,6 @@
         margin-top: 50px;
     }
 </style>
+                    <button style=" background-color:#00BBF0;color:white" id="copyText" onclick="genList('list')"
+                        class="btn" data-clipboard-action="copy" data-clipboard-target="#list">Copy to
+                        Clipboard</button>
